Added support for in-memory DB context whenever a connection string is not provided

--- a/MultitierApi/BackendApi/appsettings.json
+++ b/MultitierApi/BackendApi/appsettings.json
@@ -5,9 +5,9 @@
     }
   },
   "AllowedHosts": "*",
-  "mongodb": "mongodb://todo-user:todo-password@168.61.162.80:27017/todoitems",
-  "mongodatabase": "todoitems",
-  "mongocollection": "todolist",
+  "mongodb": "",
+  "mongodatabase": "",
+  "mongocollection": "",
   "ApplicationInsights": {
     "InstrumentationKey": "b1e8f3c6-bd36-47bb-8de9-221b9848f78f"
   }
