--- a/MultitierApi/BackendApi/appsettings.json
+++ b/MultitierApi/BackendApi/appsettings.json
@@ -9,6 +9,6 @@
   "mongodatabase": "",
   "mongocollection": "",
   "ApplicationInsights": {
-    "InstrumentationKey": "b1e8f3c6-bd36-47bb-8de9-221b9848f78f"
+    "InstrumentationKey": ""
   }
 }
