--- a/MultitierApi/appsettings.json
+++ b/MultitierApi/appsettings.json
@@ -5,8 +5,8 @@
       "Default": "Warning"
     }
   },
-  "backendurl": "http://backend-svc.default.svc.cluster.local",
+  "backendurl": "http://",
   "ApplicationInsights": {
-    "InstrumentationKey": "894cfde4-fe0c-48a7-a9c8-04f20f142e3e"
+    "InstrumentationKey": ""
   }
 }
