made updates to multi-tier application by adding a new backend function

--- a/MultitierApi/BackendApi/appsettings.json
+++ b/MultitierApi/BackendApi/appsettings.json
@@ -8,6 +8,7 @@
   "mongodb": "",
   "mongodatabase": "",
   "mongocollection": "",
+  "functionurl": "",
   "ApplicationInsights": {
     "InstrumentationKey": ""
   }
