added user token endpoint

--- a/MultitierApi/appsettings.json
+++ b/MultitierApi/appsettings.json
@@ -7,6 +7,6 @@
   },
   "backendurl": "http://",
   "ApplicationInsights": {
-    "InstrumentationKey": ""
+    "InstrumentationKey": "a414f7c3-4d47-46c4-812c-1c8d23ed2c2a"
   }
 }
