Added service to service authentication between frontend and backend APIs

--- a/MultitierApi/BackendApi/appsettings.json
+++ b/MultitierApi/BackendApi/appsettings.json
@@ -11,5 +11,12 @@
   "functionurl": "",
   "ApplicationInsights": {
     "InstrumentationKey": ""
+  },
+  "AzureAd": {
+    "Domain": "microsoft.onmicrosoft.com",
+    "TenantId": "72f988bf-86f1-41af-91ab-2d7cd011db47",
+    "Instance": "https://login.microsoftonline.com/",
+    "RequiredScopes": "user_impersonation,access_as_user",
+    "ClientId": "9ac396fb-6ae4-4160-9e96-adfcd71f7667"
   }
 }
