--- a/MultitierApi/appsettings.json
+++ b/MultitierApi/appsettings.json
@@ -7,6 +7,13 @@
   },
   "backendurl": "http://",
   "ApplicationInsights": {
-    "InstrumentationKey": "a414f7c3-4d47-46c4-812c-1c8d23ed2c2a"
+    "InstrumentationKey": ""
+  },
+  "AzureAd": {
+    "Domain": "microsoft.onmicrosoft.com",
+    "TenantId": "72f988bf-86f1-41af-91ab-2d7cd011db47",
+    "FrontendClientId": "dcb064fd-b935-4587-86a2-d92f3340a530",
+    "FrontendClientSecret": "MAuAsoTDV91qszbJu@[-by2Z@o8DQHrH",
+    "BackendScope": "api://9ac396fb-6ae4-4160-9e96-adfcd71f7667/access_as_user"
   }
 }
