moved dependencies to separate project and added new backend function endpoints

--- a/MultitierApi/BackendApi/BackendApi.csproj
+++ b/MultitierApi/BackendApi/BackendApi.csproj
@@ -26,6 +26,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Common\Common.csproj" />
     <ProjectReference Include="..\..\Microsoft.Identity.Web\Microsoft.Identity.Web.csproj" />
   </ItemGroup>
 
