--- a/MultitierApi/BackendApi/appsettings.json
+++ b/MultitierApi/BackendApi/appsettings.json
@@ -16,7 +16,9 @@
     "Domain": "microsoft.onmicrosoft.com",
     "TenantId": "72f988bf-86f1-41af-91ab-2d7cd011db47",
     "Instance": "https://login.microsoftonline.com/",
-    "RequiredScopes": "user_impersonation,access_as_user",
-    "ClientId": "9ac396fb-6ae4-4160-9e96-adfcd71f7667"
+    "RequiredScopes": "access_as_user",
+    "ClientId": "9ac396fb-6ae4-4160-9e96-adfcd71f7667",
+    "ClientSecret": "hL/1vp8Xrjf[HSQUcD9:[Dn8SQFbW=qG",
+    "BackendFunctionScope": "api://d19559b3-e99b-4f51-af0b-ed4c8ebcb810/access_as_user"
   }
 }
