changes and fixes to app authentication

--- a/MultitierApi/BackendApi/appsettings.json
+++ b/MultitierApi/BackendApi/appsettings.json
@@ -8,7 +8,8 @@
   "mongodb": "",
   "mongodatabase": "",
   "mongocollection": "",
-  "functionurl": "",
+  //"functionurl": "http://localhost:7071",
+  "functionurl": "https://marv-backend-function.azurewebsites.net",
   "ApplicationInsights": {
     "InstrumentationKey": ""
   },
